--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "admin-dashboard",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
